# upgrade-util

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
src/: inherit.py  report-migration.xml  setup.cfg  testing.py  util.py
src/base/0.0.0/: end-clean-__upgrade__-crons.py  end-moved0.py  end-no-respawn-fields.py  end-user_groups_view.py  post-01-modules-auto-discovery.py  post-02-force-upgrade-installed-modules.py  post-commercial_partner_id.py  pre-00-critical.py  pre-00-upgrade-start.py  pre-base_version.py  pre-models-ir_model_relation.py  pre-moved0.py
src/base/17.0.1.3/: attr_domains2expr.py
src/base/8.0.1.3/: pre-00-base_version.py
src/base/9.0.1.3/: pre-00-upgrade-start.py
src/base/tests/: __init__.py  test_ensure_has_pk.py  test_moved0.py  test_util.py
src/l10n_do_banks/15.0.1.0.0/: pre-alert.py
src/l10n_do_banks/16.0.1.0.0/: pre-alert.py
src/l10n_do_banks/17.0.1.0.0/: end-migration.py  end-views-activation.py  pre-fix-oca-stock-analytic-view.py  pre-migration.py  pre-modules-uninstall.py  pre-sale-subscription.py  pre-view-delete.py
src/l10n_do_banks/19.0.1.0.0/: end-00-finalize-cash-workflow.py  end-cash-workflow-migrate.py  end-views-activation.py  end-views-management.py  pre-00-migrate-cash-workflow.py  pre-20-migrate-and-uninstall-cash-workflow.py  pre-25-uninstall-news-attendance-use-native-overtime.py  pre-module-install.py  pre-module-merge.py  pre-module-rename.py  pre-modules-install.py  pre-modules-uninstall.py  pre-report-zpl-direct-print-merge.py  pre-unlock-noupdate.py  pre-views-delete.py
src/mail/0.0.0/: pre-report-migration.py
src/product_sequence/17.0.1.0.0/: end-migration.py  pre-remove_constraint.py
src/sale_discount_display_amount/17.0.1.0.0/: pre-populate-discount-fields.py
src/spreadsheet/: tokenizer.py
src/spreadsheet/tests/: __init__.py  test_spreadsheet_parser.py  test_spreadsheet_tokenizer.py
src/util/: __init__.py  _inherit.py  accounting.py  const.py  context.py  convert_bootstrap.py  data.py  domains.py  exceptions.py  fields.py  helpers.py  hr_payroll.py  inconsistencies.py  indirect_references.py  inherit.py  jinja_to_qweb.py  json.py  logger.py  misc.py  models.py  modules.py  orm.py  pg.py  profiler.py  records.py  release-note.xml  report-migration.xml  report.py  snippets.py  specific.py  util.py  views_convert.py
src/util/spreadsheet/: __init__.py  data_wrappers.py  fields.py  misc.py  models.py  o_spreadsheet.py  parser.py  revisions.py  tokenizer.py
src/util/views/: bootstrap.py  convert.py  records.py
tools/: compile23.py  fetch-release-notes-video-id.py  generate-inherit.py  graph-upgrade-timing.py
